--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
         android:id="@+id/buttonRecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="36dp"
         android:text="recycler"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPertemuan"
         app:layout_constraintStart_toEndOf="@+id/buttonListView"
-        app:layout_constraintTop_toBottomOf="@+id/btnTracker" />
+        app:layout_constraintTop_toBottomOf="@+id/btnTracker"
+        app:layout_constraintVertical_bias="0.039" />
 
     <EditText
         android:id="@+id/editText1"
@@ -104,6 +105,17 @@
         app:layout_constraintStart_toEndOf="@+id/buttonRecyclerView"
         app:layout_constraintTop_toBottomOf="@+id/btnTracker"
         app:layout_constraintVertical_bias="0.013" />
+
+    <Button
+        android:id="@+id/buttonPertemuan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="92dp"
+        android:text="Pertemuan"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
